# pylibchecker

./: README.md  pyproject.toml
.github/workflows/: autotag.yml  publish.yml  unittest.yml
libchecker/: __init__.py
test/: test.py
