[tool.poetry]
name = "pylibchecker"
version = "1.0.0"
description = "Utils inspired by LibChecker, checking Android so files."
authors = ["LY <ly-niko@qq.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [
    { include = "libchecker" }
]
keywords = ["apk", "jni", "android"]
repository = "https://github.com/Young-Lord/pylibchecker"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Young-Lord/pylibchecker/issues"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
platformdirs = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
